Ui5 bootstraping bolum 1.2

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html> <!-- ! yaparak html doc oluşturabilirsin -->
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiori Eğitim</title> <!-- ! title tag sayfanın başlığını belirler -->
-<!-- ! sap-ui-bootstrap, SAPUI5 kütüphanesini yükler -->
+    <!-- ! sap-ui-bootstrap, SAPUI5 kütüphanesini yükler -->
     <!-- ui5.product.list name space'sinin sağ tarafında html alanın yolu bulunmaktadır -->
-    <script
-        id="sap-ui-bootstrap" 
-        src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_horizon"
-        data-sap-ui-libs="sap.m"
-        data-sap-ui-compatVersion="edge"
-        data-sap-ui-async="true"
-        data-sap-ui-resourceroots='{
+    <script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+        data-sap-ui-theme="sap_horizon" data-sap-ui-libs="sap.m" data-sap-ui-compatVersion="edge"
+        data-sap-ui-async="true" data-sap-ui-resourceroots='{
             "ui5.product.list": "./"
-        }'
-        data-sap-ui-onInıt=""
-    ></script>
-<!-- ! sap-ui-bootstrap, SAPUI5 kütüphanesini yükler -->
+        }' data-sap-ui-onInit="module:ui5/product/list/index"></script>
+    <!-- ! sap-ui-bootstrap, SAPUI5 kütüphanesini yükler -->
 </head>
-<body>
-    
+
+<body class="sapUiBody">
+
+
 </body>
+
 </html>
