Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ! sap-ui-bootstrap, SAPUI5 kütüphanesini yükler -->
 </head>
 
-<body class="sapUiBody">
+<body class="sapUiBody" id ="content">
 
 
 </body>
