--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- ! sap-ui-bootstrap, SAPUI5 kütüphanesini yükler -->
     <!-- ui5.product.list name space'sinin sağ tarafında html alanın yolu bulunmaktadır -->
     <script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_horizon" data-sap-ui-libs="sap.m" data-sap-ui-compatVersion="edge"
+        data-sap-ui-theme="sap_horizon" 
+        data-sap-ui-compatVersion="edge"
         data-sap-ui-async="true" data-sap-ui-resourceroots='{
             "ui5.product.list": "./"
         }' data-sap-ui-onInit="module:ui5/product/list/index"></script>
